<resources>
    <string name="app_name">WGU Term Tracker JC</string>

    <!-- Main menu strings -->
    <string name="current_term">Current Term</string>
    <string name="all_terms">View All Terms</string>
    <string name="current_term_icon_description">Single current term icon</string>
    <string name="all_terms_icon_description">Multiple terms icon</string>

    <!-- Activity title strings -->
    <string name="title_activity_all_terms">All Terms List</string>
    <string name="title_activity_term_details">Term Details</string>
    <string name="title_activity_term_courses_list">Term Courses List</string>
    <string name="title_activity_course_details">Course Details</string>
    <string name="title_activity_assessment_list">Course Assessments List</string>
    <string name="title_activity_assessment_details">Assessment Details</string>
    <string name="title_activity_add_term">Add a Term</string>
    <string name="title_activity_add_course">Add a Course</string>
    <string name="title_activity_add_assessment">Add an Assessment</string>
    <string name="title_activity_add_note">Add Course Note</string>
    <string name="title_activity_note_details">Course Note Details</string>

    <!-- All Terms Screen Menu strings -->
    <string name="insert_test_data">Insert Test Data</string>
    <string name="delete_all_terms">Delete All Terms</string>

    <!-- All Courses List Screen Menu Strings -->
    <string name="delete_all_courses">Delete All Courses</string>

    <!-- All assessments Menu_assessments_list Strings -->
    <string name="delete_all_assessments">Delete All Assessments</string>

    <!-- Add Term TextView strings -->
    <string name="term_name">Term Name</string>
    <string name="term_start_date">Term Start Date</string>
    <string name="term_end_date">Term End Date</string>
    <string name="term_name_hint">Term 1</string>
    <string name="term_date_hint">MM/DD/YYYY</string>
    <string name="term_save_button">Save</string>

    <!-- Add Course TextView strings -->
    <string name="course_name">Course Name</string>
    <string name="course_start_date">Course Start Date</string>
    <string name="course_end_date">Course End Date</string>
    <string name="course_status">Course Status</string>
    <string name="course_mentor_name">Mentor Name</string>
    <string name="course_mentor_phone">Mentor Phone</string>
    <string name="course_mentor_email">Mentor Email</string>
    <string name="course_name_hint">Course 1</string>
    <string name="course_date_hint">MM/DD/YYYY</string>
    <string name="course_status_hint">Plan to Take</string>
    <string name="course_mentor_name_hint">Angela Smith</string>
    <string name="course_mentor_phone_hint">123–456–7890</string>
    <string name="course_mentor_email_hint">angelasmith123@email.com</string>
    <string name="course_save_button">Save</string>

    <!-- Add Assessment TextView Strings -->
    <string name="assessment_name">Assessment Name:</string>
    <string name="assessment_due_date">Assessment Due Date:</string>
    <string name="assessment_description">Assessment Description</string>
    <string name="assessment_name_hint">Objective assessment 1</string>
    <string name="assessment_due_date_hint">07/07/2020</string>
    <string name="assessment_description_hint">Create an application that will...</string>
    <string name="assessment_save_button">Save</string>

    <!-- Add Notes TextView Strings -->
    <string name="course_note_textView">Course Note:</string>
    <string name="course_note_hint">Add your course notes here...</string>
    <string name="note_dave_button">Save</string>

    <!-- list_term_item TextView Strings -->
    <string name="list_item_start_date">Start Date: </string>
    <string name="list_item_end_date">End Date: </string>

    <!-- list_course_item TextView Strings -->
    <string name="list_course_item_course_name">Course Name</string>
    <string name="list_course_item_status">Status: </string>
    <string name="list_course_item_start_date">Start Date: </string>
    <string name="list_course_item_end_date">End Date: </string>
    <string name="list_course_item_mentor_name">Mentor Name: </string>
    <string name="list_course_item_mentor_phone">Mentor Phone: </string>
    <string name="list_course_item_mentor_email">Mentor Email: </string>

    <!-- list_assessment_item TextView Strings -->
    <string name="list_assessment_item_assessment_name">Assessment Name</string>
    <string name="list_assessment_item_due_date">Due Date: </string>
    <string name="list_assessment_item_description">Assessment Description:</string>

    <!-- content_term_details TextView Strings -->
    <string name="term_details_term_courses_textView">Term Courses</string>

    <!-- content_course_details TextView Strings -->
    <string name="course_assignments_textView">Course Assignments</string>
    <string name="course_assignments_icon_description">Multiple assignment icon</string>
    <string name="course_notes_textView">Course Notes</string>
    <string name="course_notes_icon_description">Course Notes Icon</string>

    <!-- empty TextView text -->
    <string name="empty_term_text">Click the button to add a term</string>
    <string name="empty_courses_text">Click the button to add a course</string>
    <string name="empty_assessments_text">Click the button to add an assessment</string>

    <!-- Menu_term_details Strings -->
    <string name="set_active_current_term">Set Current/Active Term</string>
    <string name="delete_current_term">Delete Term</string>
    <string name="edit_current_term">Edit Term</string>

    <!-- Menu_course_details Strings -->
    <string name="delete_current_course">Delete Course</string>
    <string name="edit_current_course">Edit Course</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="start_course">Start Course</string>
    <string name="complete_course">Mark Course Complete</string>
    <string name="drop_course">Drop Course</string>

    <!-- Menu_assessment_details Strings -->
    <string name="delete_current_assessment">Delete Assessment</string>
    <string name="edit_current_assessment">Edit Assessment</string>

    <!-- Menu_note_details Strings -->
    <string name="delete_current_note">Delete Note</string>
    <string name="edit_current_note">Edit Note</string>
    <string name="email_current_note">Email Note</string>

    <!-- Term View Strings -->
    <string name="all_courses">All Courses</string>
    <string name="all_courses_icon_description">Multiple courses icon</string>

</resources>
