<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/edit_assessment_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:text="@string/assessment_save_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_assessment_name"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="bottom|start"
                android:text="@string/assessment_name" />

            <TextView
                android:id="@+id/text_view_assessment_due_date"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="bottom|start"
                android:text="@string/assessment_due_date" />

            <TextView
                android:id="@+id/text_view_assessment_description"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="bottom|start"
                android:text="@string/assessment_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_assessment_name"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:ems="10"
                android:hint="@string/assessment_name_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_assessment_due_date"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:ems="10"
                android:hint="@string/assessment_due_date_hint"
                android:inputType="date" />

            <EditText
                android:id="@+id/edit_assessment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/assessment_description_hint"
                android:inputType="textPersonName|textMultiLine" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
