<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_term_name"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="bottom|start"
            android:text="@string/term_name" />

        <TextView
            android:id="@+id/text_view_term_start"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="bottom|start"
            android:text="@string/term_start_date" />

        <TextView
            android:id="@+id/text_view_term_end"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="bottom|start"
            android:text="@string/term_end_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_term_name"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:ems="10"
            android:hint="@string/term_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_term_start_date"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/term_date_hint"
            android:inputType="date" />

        <EditText
            android:id="@+id/edit_term_end_date"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/term_date_hint"
            android:inputType="date" />

        <Button
            android:id="@+id/button_save_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/term_save_button" />
    </LinearLayout>

</LinearLayout>
