<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/edit_note_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:text="@string/note_dave_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_note_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/edit_note_course_notes_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/course_note_textView"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_note_course_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/course_note_hint"
            android:inputType="textPersonName|textMultiLine" />

    </LinearLayout>

</RelativeLayout>
