<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/term_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_name"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/term_start"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/list_item_start_date"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/term_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/term_end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/list_item_end_date"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/term_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/term_details_term_courses_textView" />

    <ImageButton
        android:id="@+id/all_courses_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/all_courses_icon_description"
        app:srcCompat="@drawable/ic_format_list_bulleted" />

</LinearLayout>
