<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="4dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_course_item_course_name"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/course_item_status"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/list_course_item_status"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/course_item_status_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/course_item_start"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/list_course_item_start_date"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/course_item_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/course_item_end"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/list_item_end_date"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/course_item_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/course_item_mentor"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/list_course_item_mentor_name"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/course_item_mentor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/course_item_phone"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/list_course_item_mentor_phone"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/course_item_mentor_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/course_item_email"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/list_course_item_mentor_email"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/course_item_mentor_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/course_assignments_textView" />

    <ImageButton
        android:id="@+id/all_assignments_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/course_assignments_icon_description"
        app:srcCompat="@drawable/ic_assignment" />

</LinearLayout>
