<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/notes_button"
        android:layout_alignEnd="@id/notes_button"
        android:layout_above="@+id/notes_button"
        android:gravity="center"
        android:text="@string/course_notes_textView" />


    <ImageButton
        android:id="@+id/notes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/course_notes_icon_description"
        app:srcCompat="@drawable/ic_comment" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/textView2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/assessment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_assessment_item_assessment_name"
            android:textAppearance="?android:textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/assessment_item_due_date_textview"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/assessment_due_date"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/assessment_item_due_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|start"
                android:text=""
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

        <TextView
            android:id="@+id/assessment_item_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/list_assessment_item_description"
            android:textAppearance="?android:textAppearanceMedium" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/assessment_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:textAppearanceMedium" />

            </ScrollView>

    </LinearLayout>


</RelativeLayout>
