<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/list_course_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_course_item_course_name"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_course_item_status"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/list_course_item_status"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/list_course_item_status_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_course_item_start"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/list_course_item_start_date"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/list_course_item_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_course_item_end"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/list_item_end_date"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/list_course_item_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>